# Arknights_6Star_Rank_Vote

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.html  README.md  a.ipynb  add_new_staff.py  archive.db  backend.py  build.rs  config.py  config.toml  docker-compose.yaml  final_data数据分析.ipynb  go.mod  main.go  main.py  orm.py  package-lock.json  package.json  prometheus.yml  pyproject.toml  redirect.py  requirements.txt  startFrontend.bat  weihu.py  六星干员强度投票箱.html
.sqlx/: query-91ab6be4cd9605c1f9fde41d394d10f402a6e14155aa4c90447d55d3924acbed.json
app/: __main__.py  app.py  asgi.py  cache.py  config.py  data.py  data_store.py  logger.py  model.py  status.py  task.py
app/config/: __init__.py  app.py  config.py
app/db/: model.py
app/domain/: __init__.py  get_operators_1v1_matrix.py  new_compare.py  page.py  save_score.py  sync.py  upload.py  view_final_order.py
app/lib/: cache.py  exceptions.py
app/lzpy/: README.md  __init__.py  test.py
app/server/: core.py  plugins.py
app/snowflake/: __init__.py  setup.py  snowflake.c  snowflake.pyi  snowflake.pyx
backend_resource/: a.ipynb  backend.py
backend_resource/list/: lose_record.txt  pic_url.txt  win_record.txt
db/: db.txt  operator_vote_matrix.json
deploy 本地部署后端体验版/list/: lose_record.txt  name.txt  win_record.txt
frontend/: .gitignore  README.md  auto-imports.d.ts  eslint.config.mjs  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/py/: merge-data.py
frontend/src/: App.vue  main.js
frontend/src/api/: matrix.js  new_compare.js  save_score.js  view_final_order.js
frontend/src/assets/js/: table.js  transfer.js
frontend/src/components/: Compare.vue  CompareOperator.vue  Container.vue  FinalOrder.vue  FinalOrderOwn.vue  Menu.vue  MouseFollower.vue  Operator.vue  Panel.vue  SiteTitle.vue  VoteTable.vue
frontend/src/composables/: useApi.js  useOperator.js  useOperators.js
frontend/src/composables/data/: operators.json
frontend/src/router/: index.js
frontend/src/store/: useCompareStore.js  useLocalVoteStore.js
frontend/src/styles/: variables.css
frontend/src/utils/: formatTime.js  getBestCluster.js  getColors.js
frontend/src/views/: Home.vue
frontendRe/frontend_re/public/: index.html
frontendRe/frontend_re/src/: App.vue
frontendRe/frontend_re/src/styles/: compare.css
frontendRe/frontend_re/src/views/: HomeView.vue
frontend_re/: README.md  package-lock.json  package.json  vue.config.js
frontend_re/src/: main.js
frontend_re/src/assets/compatibleJS/: datadict.js  table.js  transfer.js
frontend_re/src/styles/: compare.css  table.css  transfer.css
frontend_re/src/views/: HomeView.vue
ip/: ip_ban.pickle  ip_dict.pickle
list/: lose_record.txt  lose_score.pickle  name.txt  pic_url.txt  win_record.txt  win_score.pickle
lzpy/: __init__.py  test.py
migrations/: 0001_create_vote_table.sql
model/: VoteRecordDB.py  __init__.py
proto/: vote.pb.go  vote.proto  vote_grpc.pb.go
resources/: operators_6star_id.json  operators_6star_pic.json
result_V1.3/: get_data_from_server.py  ip_ban.pickle  ip_dict.pickle  lose_score.pickle  read_data.ipynb  win_score.pickle
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  signal.rs  snow_flake.rs
src/services/: consumer.rs  mod.rs  voting.rs
static/css/: base.css  compare.css
static/js/: datadict.js  id_operator.js  page.js  palette.min.js  saveScoreWorker.js
templates/: page.html
templates/css/: compare.css
templates/js/: page.js
test/: locustfile.py
tests/: conftest.py  perf.py  test_new_compare.py
utils/: SimpleMQ.py  ThreadSafeOrderedDict.py  ThreadSafeSet.py  __init__.py  utils.py
(+3 files in other folders)
