[package]
name = "ark_vote"
version = "0.1.0"
edition = "2024"

[dependencies]
mimalloc = "0.1.43"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
bb8 = "0.9.0"
bb8-redis = "0.21.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.96"
serde_json = "1"
redis = { version = "0.29.0", features = ["script"] }
uuid = { version = "1.15", features = ["v4"] }
hex = "0.4.3"
async-nats = "0.39.0"
futures = "0.3.31"
prost = "0.13"
tonic = "0.12.3"
sqlx = { version = "0.8", features = ["ipnetwork", "postgres", "runtime-tokio", "chrono"] }
thiserror = "2.0.11"
once_cell = "1.20.3"
prometheus = "0.13.4"
config = { version = "0.15.8", features = ["toml"] }
parking_lot = "0.12.3"
notify = "8.0.0"
chrono = "0.4"

[build-dependencies]
tonic-build = "*"
